--- a/package.json
+++ b/package.json
@@ -27,5 +27,11 @@
     "mysql2": "^3.3.5",
     "sequelize": "^6.32.0",
     "stack": "^0.1.0"
+  },
+  "devDependencies": {
+    "jasmine-core": "^5.0.1",
+    "karma": "^6.4.2",
+    "karma-chrome-launcher": "^3.2.0",
+    "karma-jasmine": "^5.1.0"
   }
 }
